# ai_txt-system

./: CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  conanfile.txt
data/: Dockerfile  example.env
data/reports/: 2026-04-07_Linux_CycloneDx.json  2026-04-07_Linux_depdiscover.html  2026-04-07_Linux_depdiscover.json  2026-04-12_Linux_CycloneDx.json  2026-04-12_Linux_depdiscover.html  2026-04-12_Linux_depdiscover.json
docs/architecture/: overview.md
docs/source_docu/: README.md
docs/source_docu/include/: llm_provider.hpp.md
docs/source_docu/src/: ai_cli.cpp.md  ai_srv.cpp.md  llm_provider.cpp.md
include/: llm_provider.hpp
src/: ai_cli.cpp  ai_srv.cpp  llm_provider.cpp
